--- a/404/index.html
+++ b/404/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <title>Punto Cero</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#75e7fb" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>Marmolería Juárez</title>
 
     <style media="screen">
       body {
@@ -141,14 +141,14 @@
   </head>
   <body>
     <div id="message">
-      <img class="logo" src="./img/logo1.png" alt="logo1" />
+      <img class="logo" src="./img/logo.png" alt="logo1" />
       <!-- <img class="horariosPNG" src="./QR/horariosOCT22.jpg" style="display: block" alt="QRdescarga" /> -->
       <!-- <object data="./QR/horariosOCT22.pdf" type="pdf" style="display: block"></object> -->
       <br />
       <div class="contenido">
         <p>Este sitio web esta en construcción 🚧</p>
         <p>Los desarrolladores estan trabajando en el sitio!</p>
-        <span class="mark">JussWebStudio</span>
+        <span class="mark">jussefdev.com</span>
       </div>
     </div>
     <!-- -------- -->
