--- a/Sitio/index.html
+++ b/Sitio/index.html
@@ -14,10 +14,6 @@
     <meta name="theme-color" content="#ffffff" />
     <title>Marmolería Juárez</title>
 
-    <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon" />
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet" />
 
@@ -37,9 +33,9 @@
   <body>
     <header id="header">
       <div class="container-fluid">
-        <div id="logo" class="pull-left">
-          <h1><a href="#intro" class="scrollto">BizPage</a></h1>
-          <!-- <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>-->
+        <div id="cajalogo" class="pull-left">
+          <!-- <h1><a href="#intro" class="scrollto">Marmolería Juárez</a></h1> -->
+          <a href="#intro"><img id="logo" alt="logo1" /></a>
         </div>
 
         <nav id="nav-menu-container">
@@ -76,7 +72,7 @@
 
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <div class="carousel-background"><img src="img/intro-carousel/1.jpg" alt="" /></div>
+              <div class="carousel-background"><img src="img/intro-carousel/1.png" alt="" /></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2>We are professional</h2>
@@ -90,7 +86,7 @@
             </div>
 
             <div class="carousel-item">
-              <div class="carousel-background"><img src="img/intro-carousel/2.jpg" alt="" /></div>
+              <div class="carousel-background"><img src="img/intro-carousel/2.png" alt="" /></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2>At vero eos et accusamus</h2>
@@ -104,7 +100,7 @@
             </div>
 
             <div class="carousel-item">
-              <div class="carousel-background"><img src="img/intro-carousel/3.jpg" alt="" /></div>
+              <div class="carousel-background"><img src="img/intro-carousel/3.png" alt="" /></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2>Temporibus autem quibusdam</h2>
@@ -118,7 +114,7 @@
             </div>
 
             <div class="carousel-item">
-              <div class="carousel-background"><img src="img/intro-carousel/4.jpg" alt="" /></div>
+              <div class="carousel-background"><img src="img/intro-carousel/4.png" alt="" /></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2>Nam libero tempore</h2>
@@ -132,7 +128,7 @@
             </div>
 
             <div class="carousel-item">
-              <div class="carousel-background"><img src="img/intro-carousel/5.jpg" alt="" /></div>
+              <div class="carousel-background"><img src="img/intro-carousel/5.png" alt="" /></div>
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2>Magnam aliquam quaerat</h2>
@@ -162,9 +158,32 @@
 
     <main id="main">
       <!--==========================
-      Featured Services Section
+      texto
     ============================-->
       <section id="featured-services">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 box">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem voluptatum commodi fugiat, corporis quos nam soluta vel deserunt voluptate, necessitatibus in dolor illum eos corrupti nihil tempora impedit libero.</p>
+              <br>
+              <br>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam labore enim quaerat consequatur aut ducimus voluptatem perspiciatis tempore quas esse alias, odit officia distinctio quisquam, vitae atque dolores corrupti molestias.</p>
+              <br>
+              <br>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam labore enim quaerat consequatur aut ducimus voluptatem perspiciatis tempore quas esse alias, odit officia distinctio quisquam, vitae atque dolores corrupti molestias.</p>
+              <br>
+              <br>
+              <br>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- #texto -->
+
+       <!--==========================
+      Featured Services Section
+    ============================-->
+      <!-- <section id="featured-services">
         <div class="container">
           <div class="row">
             <div class="col-lg-4 box">
@@ -186,13 +205,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #featured-services -->
 
       <!--==========================
       About Us Section
     ============================-->
-      <section id="about">
+      <!-- <section id="about">
         <div class="container">
           <header class="section-header">
             <h3>About Us</h3>
@@ -234,13 +253,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #about -->
 
       <!--==========================
       Services Section
     ============================-->
-      <section id="services">
+      <!-- <section id="services">
         <div class="container">
           <header class="section-header wow fadeInUp">
             <h3>Services</h3>
@@ -280,25 +299,25 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #services -->
 
       <!--==========================
       Call To Action Section
     ============================-->
-      <section id="call-to-action" class="wow fadeIn">
+      <!-- <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
           <h3>Call To Action</h3>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <a class="cta-btn" href="#">Call To Action</a>
         </div>
-      </section>
+      </section> -->
       <!-- #call-to-action -->
 
       <!--==========================
       Skills Section
     ============================-->
-      <section id="skills">
+      <!-- <section id="skills">
         <div class="container">
           <header class="section-header">
             <h3>Our Skills</h3>
@@ -331,12 +350,12 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!--==========================
       Facts Section
     ============================-->
-      <section id="facts" class="wow fadeIn">
+      <!-- <section id="facts" class="wow fadeIn">
         <div class="container">
           <header class="section-header">
             <h3>Facts</h3>
@@ -369,13 +388,13 @@
             <img src="img/facts-img.png" alt="" class="img-fluid" />
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #facts -->
 
       <!--==========================
       Portfolio Section
     ============================-->
-      <section id="portfolio" class="section-bg">
+      <!-- <section id="portfolio" class="section-bg">
         <div class="container">
           <header class="section-header">
             <h3 class="section-title">Our Portfolio</h3>
@@ -529,13 +548,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #portfolio -->
 
       <!--==========================
       Clients Section
     ============================-->
-      <section id="clients" class="wow fadeInUp">
+      <!-- <section id="clients" class="wow fadeInUp">
         <div class="container">
           <header class="section-header">
             <h3>Our Clients</h3>
@@ -552,13 +571,13 @@
             <img src="img/clients/client-8.png" alt="" />
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #clients -->
 
       <!--==========================
       Clients Section
     ============================-->
-      <section id="testimonials" class="section-bg wow fadeInUp">
+      <!-- <section id="testimonials" class="section-bg wow fadeInUp">
         <div class="container">
           <header class="section-header">
             <h3>Testimonials</h3>
@@ -621,13 +640,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #testimonials -->
 
       <!--==========================
       Team Section
     ============================-->
-      <section id="team">
+      <!-- <section id="team">
         <div class="container">
           <div class="section-header wow fadeInUp">
             <h3>Team</h3>
@@ -708,13 +727,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #team -->
 
       <!--==========================
       Contact Section
     ============================-->
-      <section id="contact" class="section-bg wow fadeInUp">
+      <!-- <section id="contact" class="section-bg wow fadeInUp">
         <div class="container">
           <div class="section-header">
             <h3>Contact Us</h3>
@@ -773,14 +792,14 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- #contact -->
     </main>
 
     <!--==========================
     Footer
   ============================-->
-    <footer id="footer">
+    <!-- <footer id="footer">
       <div class="footer-top">
         <div class="container">
           <div class="row">
@@ -834,16 +853,10 @@
       <div class="container">
         <div class="copyright">&copy; Copyright <strong>BizPage</strong>. All Rights Reserved</div>
         <div class="credits">
-          <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-        -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- #footer -->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
