--- a/Sitio/index.html
+++ b/Sitio/index.html
@@ -316,122 +316,29 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-monumento wow fadeInUp" data-wow-delay="0.1s">
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/web3.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <img src="img/portfolio/monumentos/1.jpeg" class="img-fluid" alt="" />
+                  <a href="img/portfolio/monumentos/1.jpeg" class="link-preview" data-lightbox="portfolio" data-title="Monumento de marmol" title="Preview"><i class="ion ion-eye"></i></a>
                 </figure>
-
                 <div class="portfolio-info">
-                  <h4><a href="#">Web 3</a></h4>
-                  <p>Web</p>
+                  <h4><a href="#">Monumento de marmol</a></h4>
+                  <p>Monumento de marmol</p>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-cruces wow fadeInUp" data-wow-delay="0.2s">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-florero wow fadeInUp" data-wow-delay="0.2s">
               <div class="portfolio-wrap">
                 <figure>
-                  <img src="img/portfolio/app2.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  <img src="img/portfolio/floreros/1.jpeg" class="img-fluid" alt="" />
+                  <a href="img/portfolio/floreros/1.jpeg" class="link-preview" data-lightbox="portfolio" data-title="Florero de marmol" title="Preview"><i class="ion ion-eye"></i></a>
                 </figure>
-
                 <div class="portfolio-info">
-                  <h4><a href="#">App 2</a></h4>
-                  <p>App</p>
+                  <h4><a href="#">Florero de marmol</a></h4>
+                  <p>Florero de marmol</p>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-florero wow fadeInUp">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/card2.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/card2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-
-                <div class="portfolio-info">
-                  <h4><a href="#">Card 2</a></h4>
-                  <p>Card</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-monumento wow fadeInUp" data-wow-delay="0.1s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/web2.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-
-                <div class="portfolio-info">
-                  <h4><a href="#">Web 2</a></h4>
-                  <p>Web</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-cruces wow fadeInUp" data-wow-delay="0.2s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/app3.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-
-                <div class="portfolio-info">
-                  <h4><a href="#">App 3</a></h4>
-                  <p>App</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-florero wow fadeInUp">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/card1.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/card1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-
-                <div class="portfolio-info">
-                  <h4><a href="#">Card 1</a></h4>
-                  <p>Card</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-florero wow fadeInUp" data-wow-delay="0.1s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/card3.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/card3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-
-                <div class="portfolio-info">
-                  <h4><a href="#">Card 3</a></h4>
-                  <p>Card</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-monumento wow fadeInUp" data-wow-delay="0.2s">
-              <div class="portfolio-wrap">
-                <figure>
-                  <img src="img/portfolio/web1.jpg" class="img-fluid" alt="" />
-                  <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </figure>
-
-                <div class="portfolio-info">
-                  <h4><a href="#">Web 1</a></h4>
-                  <p>Web</p>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </section>
