--- a/Sitio/index.html
+++ b/Sitio/index.html
@@ -66,7 +66,7 @@
               <div class="carousel-background"><img src="img/intro-carousel/11.jpeg" alt="" /></div>
               <div class="carousel-container">
                 <div class="carousel-content">
-                  <h2>Marmolería</h2>
+                  <h2>Marmolería Juárez</h2>
                   <p>Somos una empresa con mas de 50 años de experiencia en la elaboración de productos hechos con mármol</p>
                   <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
                 </div>
