--- a/Sitio/index.html
+++ b/Sitio/index.html
@@ -79,7 +79,7 @@
                 <div class="carousel-content">
                   <h2>Cruces</h2>
                   <p>
-                    Grabamos el nombre del ser querido, su fecha de nacimiento y fecha de fallecimiento, una dedicatoria, todo este cariño plasmado en cruces para panteón las cuales hay de diversos materiales como el hierro, madera, mármol y granito.
+                    Grabamos el nombre del ser querido, su fecha de nacimiento y fecha de fallecimiento, epitafio, todo este cariño plasmado en cruces para panteón las cuales hay de diversos materiales como el hierro, madera, mármol y granito.
                   </p>
                   <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
                 </div>
@@ -91,7 +91,7 @@
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2>Floreros Funerarios</h2>
-                  <p>En Marmolería Juárez contamos con todo tipo de floreros de mármol que podrás elegir teniendo en cuenta tus gustos personales</p>
+                  <p>En Marmolería Juárez contamos con todo tipo de floreros de mármol y granito que podrás elegir teniendo en cuenta tus gustos personales</p>
                   <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
                 </div>
               </div>
@@ -103,7 +103,7 @@
                 <div class="carousel-content">
                   <h2>Monumentos para panteón</h2>
                   <p>
-                    En Marmolería Juárez nos preocupamos por la calidad de los materiales con los que creamos nuestros monumentos para panteón. Sabemos que, al tratarse de un elemento de gran volumen, va a lucir llamativo y bonito, por lo que
+                    En Marmolería Juárez nos preocupamos por la calidad de los materiales con los que creamos nuestros monumentos para sus seres queridos. Sabemos que, al tratarse de un elemento de gran volumen, va a lucir llamativo y bonito, por lo que
                     ofrecemos resistencia, belleza y durabilidad.
                   </p>
                   <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
